// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render + wrap non Flex children 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,22 +1,18 @@
  <div
    class="components-flex css-j6raph-View-Flex-base-ItemsRow e19lxcc00"
-   data-testid="flex"
+   data-testid="base-flex"
    data-wp-c16t="true"
    data-wp-component="Flex"
  >
    <div
      class="components-flex-item css-mw3lhz-View-Item-sx-Base e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="FlexItem"
    >
      Item
    </div>
-   <div
-     class="css-1mm2cvy-View e19lxcc00"
-   />
-   <div />
    <div
      class="components-flex-item components-flex-block css-14wzr73-View-Item-sx-Base-block e19lxcc00"
      data-wp-c16t="true"
      data-wp-component="FlexBlock"
    >
`;

exports[`props should render align 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -1,15 +1,15 @@
  Array [
    Object {
-     "-ms-flex-align": "flex-start",
+     "-ms-flex-align": "center",
      "-ms-flex-direction": "row",
-     "-webkit-align-items": "flex-start",
-     "-webkit-box-align": "flex-start",
+     "-webkit-align-items": "center",
+     "-webkit-box-align": "center",
      "-webkit-box-pack": "justify",
      "-webkit-flex-direction": "row",
      "-webkit-justify-content": "space-between",
-     "align-items": "flex-start",
+     "align-items": "center",
      "display": "flex",
      "flex-direction": "row",
      "gap": "calc(4px * 2)",
      "justify-content": "space-between",
      "width": "100%",
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.emotion-0>* {
  min-width: 0;
}

.emotion-2 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-4 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  class="components-flex emotion-0 emotion-1"
  data-testid="base-flex"
  data-wp-c16t="true"
  data-wp-component="Flex"
>
  <div
    class="components-flex-item emotion-2 emotion-1"
    data-wp-c16t="true"
    data-wp-component="FlexItem"
  >
    Item
  </div>
  <div
    class="components-flex-item components-flex-block emotion-4 emotion-1"
    data-wp-c16t="true"
    data-wp-component="FlexBlock"
  >
    Item
  </div>
</div>
`;

exports[`props should render justify 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
      "-ms-flex-align": "center",
      "-ms-flex-direction": "row",
-     "-ms-flex-pack": "start",
      "-webkit-align-items": "center",
      "-webkit-box-align": "center",
-     "-webkit-box-pack": "start",
+     "-webkit-box-pack": "justify",
      "-webkit-flex-direction": "row",
-     "-webkit-justify-content": "flex-start",
+     "-webkit-justify-content": "space-between",
      "align-items": "center",
      "display": "flex",
      "flex-direction": "row",
      "gap": "calc(4px * 2)",
-     "justify-content": "flex-start",
+     "justify-content": "space-between",
      "width": "100%",
    },
  ]
`;

exports[`props should render spacing 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

  Array [
    Object {
-     "min-width": "0",
-   },
-   Object {
      "-ms-flex": "1",
      "-webkit-flex": "1",
      "display": "block",
      "flex": "1",
      "max-height": "100%",
      "max-width": "100%",
      "min-height": "0",
+     "min-width": "0",
+   },
+   Object {
      "min-width": "0",
    },
  ]
`;
